@@ -171,7 +171,7 @@ if ( ! class_exists( 'Appointments' ) ) {
 			// Other default settings
 			$this->script = $this->uri = $this->error_url = '';
 			$this->location = $this->service = $this->worker = 0;
-			$this->gcal_image = '<img src="' . $this->plugin_url . '/images/gc_button1.gif" />';
+			$this->gcal_image = '<span class="appointments-google-calendar"></span>';
 			$this->locale_errlocale_error = false;
 
 			// Create a salt, if it doesn't exist from the previous installation
